--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,9 @@
 		<meta name="description" content="WMR App">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="icon" href="data:">
-		<link rel="preload" as="script" href="/index.js" crossorigin>
-		<link rel="stylesheet" href="/style.css">
+		<link rel="preload" as="script" href="index.js" crossorigin>
 	</head>
 	<body>
-		<script type="module" src="/index.js"></script>
+		<script type="module" src="index.js"></script>
 	</body>
 </html>
